// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Component Snapshots matches snapshot for basic card 1`] = `
<RCTView
  ref={null}
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 16,
      "elevation": 3,
      "overflow": "hidden",
      "padding": 16,
      "shadowColor": "#000000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 8,
    }
  }
>
  <RCTText
    ref={null}
    testID="RCTText"
  >
    Basic Card
  </RCTText>
</RCTView>
`;

exports[`Card Component Snapshots matches snapshot for disabled card 1`] = `
<RCTPressable
  accessibilityRole="button"
  accessibilityState={
    {
      "disabled": true,
    }
  }
  accessible={true}
  aria-disabled={true}
  disabled={true}
  ref={null}
  role="button"
  style={[Function]}
>
  <RCTView
    ref={null}
    style={
      {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "elevation": 3,
        "opacity": 0.5,
        "overflow": "hidden",
        "padding": 16,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.1,
        "shadowRadius": 8,
      }
    }
  >
    <RCTText
      ref={null}
      testID="RCTText"
    >
      Disabled Card
    </RCTText>
  </RCTView>
</RCTPressable>
`;

exports[`Card Component Snapshots matches snapshot for pressable card 1`] = `
<RCTPressable
  accessibilityRole="button"
  accessibilityState={
    {
      "disabled": undefined,
    }
  }
  accessible={true}
  onPress={[Function]}
  ref={null}
  role="button"
  style={[Function]}
>
  <RCTView
    ref={null}
    style={
      {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "elevation": 3,
        "overflow": "hidden",
        "padding": 16,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.1,
        "shadowRadius": 8,
      }
    }
  >
    <RCTText
      ref={null}
      testID="RCTText"
    >
      Pressable Card
    </RCTText>
  </RCTView>
</RCTPressable>
`;
